Cut it down to one spewer and slowed things way down. Added a setTimeout to make play loop every 30 seconds forever.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="base64binary.js" type="text/javascript"></script>
 
 <script src="riffspewer.js"></script>
-<script src="sandworm.js"></script>
+<script src="sparse.js"></script>
 
 <script type="text/javascript">
 
