Added styles. Added fade out after message about being loaded displays.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
-  <title>Sandworm</title>
+  <title>Sparse</title>
+  <link rel="stylesheet" type="text/css" href="sparse.css"></link>
 </head>
+
 <body>
 
-<div id="message">Hey</div>
+<div id="outer-container">
+	<div id="message">I need a few seconds to get the piano out...</div>
+</div>
 
 <script src="midi/AudioDetect.js" type="text/javascript"></script>
 <script src="midi/LoadPlugin.js" type="text/javascript"></script>
